Closed Bug 1813050 Opened 2 years ago Closed 2 years ago

Incorrect "Last modified" time when adding bookmarks from Library

Categories

(Firefox :: Bookmarks & History, defect)

Desktop
All
defect

Tracking

()

VERIFIED FIXED
111 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox109 --- wontfix
firefox110 --- wontfix
firefox111 --- verified

People

(Reporter: epopescu, Assigned: daisuke)

References

(Regression)

Details

(Keywords: regression, Whiteboard: regression)

Attachments

(2 files)

Attached image bookmarks_Library.png

Note

  • Select to shown the column "Last modified" in Library(Views > Show columns > Last modified).

Found in

  • Firefox 110.0b6

Affected versions

  • Firefox 110.0b6
  • Nightly 111.0a1
  • Firefox 109.0
  • Firefox 102.7.0esr

Tested platforms

  • Affected platforms: Windows 10, macOS 13, Ubuntu 22.04
  • Unaffected platforms: none

Steps to reproduce

  1. Open Library (Ctrl+Shift+O) in Firefox
  2. Select any bookmarks folder(Bookmarks Toolbar, Bookmarks Menu, Other Bookmarks) and right click to Add Bookmark
  3. Fill in all the necessary details(name, url) and click the Add button

Expected result

  • The correct time, when the bookmark was added, is shown in the "Last modified" column.

Actual result

  • The wrong time(1/20/1970 11:13 AM) is shown in the "Last modified" column when adding new bookmarks directly from the Library.

Regression range

Additional notes

  • The issue can be reproduced also by adding new bookmarks using the Organize > Add Bookmark... option.
    The correct time is updated and shown in the "Last modified" column after navigating through the bookmarks folders from the left side menu.
Severity: -- → S3
Has STR: --- → yes
QA Whiteboard: regressionwindow-wanted
OS: Unspecified → All
Hardware: Unspecified → Desktop

:epopescu, if you think that's a regression, could you try to find a regression range using for example mozregression?

QA Whiteboard: regressionwindow-wanted
Regressed by: 1678626
Whiteboard: regression

:daisuke, since you are the author of the regressor, bug 1678626, could you take a look?

For more information, please visit auto_nag documentation.

Flags: needinfo?(daisuke)

Thank you very much for your reporting, Ina!
I also could reproduce this issue. Will fix it.

Flags: needinfo?(daisuke)
Assignee: nobody → daisuke
Status: NEW → ASSIGNED
Pushed by dakatsuka.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c415c9ceb78c Pass lastModified as PRTime to OnItemUrlChanged . r=mak
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

Reproduced the issue on Nightly 111.0a1 (2023-02-05) on Windows 10 x64 by following the STR from Comment 1.
Verified as fixed on Nightly 111.0a1 (2023-02-07) on Windows 10 x64, macOS 13 and Ubuntu 22.04.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: