Bug 1813050: Pass lastModified as PRTime to OnItemUrlChanged . r=mak

Differential Revision: https://phabricator.services.mozilla.com/D168362