browser/components/places/tests/browser/browser_library_new_bookmark.js
@@ -76,6 +76,8 @@ add_task(async function test_open_bookmark_from_library_instantEdiBookmark() {
         "places"
       );
 
+      let beforeUpdatedPRTime = Date.now() * 1000;
+
       fillBookmarkTextField(
         "editBMPanel_locationField",
         "https://example4.com/",
@@ -92,6 +94,11 @@ add_task(async function test_open_bookmark_from_library_instantEdiBookmark() {
         node.uri,
         "https://example4.com/",
         "InstantEditBookmark: Should have selected the newly created bookmark"
+      );
+      Assert.greater(
+        node.lastModified,
+        beforeUpdatedPRTime,
+        "InstantEditBookmark: The lastModified should be greater than the time of before updating"
       );
     }
   );
@@ -124,6 +131,7 @@ add_task(async function test_open_bookmark_from_library_editBookmark() {
 
   library.ContentTree.view.selectNode(bmLibrary);
 
+  let beforeUpdatedPRTime;
   await withBookmarksDialog(
     false,
     async () => {
@@ -145,6 +153,8 @@ add_task(async function test_open_bookmark_from_library_editBookmark() {
       placesContext.activateItem(properties, {});
     },
     async dialogWin => {
+      beforeUpdatedPRTime = Date.now() * 1000;
+
       fillBookmarkTextField(
         "editBMPanel_locationField",
         "https://example4.com/",
@@ -161,6 +171,11 @@ add_task(async function test_open_bookmark_from_library_editBookmark() {
     node.uri,
     "https://example4.com/",
     "EditBookmark: Should have selected the newly created bookmark"
+  );
+  Assert.greater(
+    node.lastModified,
+    beforeUpdatedPRTime,
+    "EditBookmark: The lastModified should be greater than the time of before updating"
   );
   await PlacesUtils.bookmarks.eraseEverything();
 });
